--- a/package.json
+++ b/package.json
@@ -4,16 +4,29 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon --exec babel-node ./server.js",
+    "build": "babel -d ./build ./server.js -s"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.24.0",
+    "dotenv": "^10.0.0",
     "graphql": "^15.5.0",
+    "mongoose": "^6.0.8",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/node": "^7.14.2",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/runtime": "^7.14.0",
+    "graphql-compose": "^9.0.3",
+    "graphql-compose-mongoose": "^9.6.0",
+    "mongoose-timestamp": "^0.6.0",
     "nodemon": "^2.0.7"
   }
 }
