--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.24.0",
+    "apollo-server": "^3.3.0",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.0",
     "mongoose": "^6.0.8",
@@ -24,8 +24,10 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.14.4",
     "@babel/runtime": "^7.14.0",
+    "bcrypt": "^5.0.1",
     "graphql-compose": "^9.0.3",
     "graphql-compose-mongoose": "^9.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose-timestamp": "^0.6.0",
     "nodemon": "^2.0.7"
   }
