--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "babel-node server.js",
-    "dev": "nodemon --exec babel-node ./server.js",
+    "start": "nodemon --exec babel-node ./server.js",
     "build": "babel -d ./build ./server.js -s"
   },
   "author": "",
